# DeskGate

./: AboutPage.idl  AboutPage.xaml  AboutPage.xaml.cpp  AdvancedPage.xaml.cpp  AdvancedPage.xaml.h  App.xaml  App.xaml.cpp  App.xaml.h  Cargo.toml  DeskGate.sln  DeskGate.vcxproj  DeskGate.vcxproj.filters  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.h  Package.appxmanifest  README.md  Resources.resw  app.manifest  readme.txt
.github/workflows/: build.yml
Pages/: AboutPage.xaml.h  AdvancedPage.idl  AdvancedPage.xaml  BasicPage.idl  BasicPage.xaml  BasicPage.xaml.cpp  BasicPage.xaml.h  MainWindow.xaml.cpp
Strings/en-us/: Resources.resw
crates/dg-bin/: Cargo.toml  build.rs
crates/dg-bin/src/: main.rs
crates/dg-core/: Cargo.toml
crates/dg-core/src/: config.rs  fence.rs  lib.rs
crates/dg-locales/: Cargo.toml
crates/dg-locales/src/: en.rs  lib.rs  zh_cn.rs  zh_tw.rs
crates/dg-win32/: Cargo.toml
crates/dg-win32/src/: app.rs  autostart.rs  blur.rs  blur_effect.rs  composition.rs  customize.rs  drag_source.rs  drop_target.rs  fence_window.rs  icon.rs  layout.rs  lib.rs  shortcut.rs  storage.rs  tray.rs
crates/dg-win32/src/modal/: mod.rs  render.rs  run.rs
crates/dg-win32/src/render/: colors.rs  d2d_context.rs  draw_fence.rs  mod.rs
