[package]
name = "dg-win32"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
dg-core = { workspace = true }
dg-locales = { workspace = true }
uuid = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT_Graphics",
    "Win32_System_WinRT_Graphics_Direct2D",
    "Win32_UI_HiDpi",
    "Foundation",
    "Foundation_Numerics",
    "Graphics_DirectX",
    "Graphics_Effects",
    "System",
    "UI",
    "UI_Composition",
    "UI_Composition_Desktop",
] }
windows-core = { workspace = true }
windows-numerics = "0.3"
